--- a/main.css
+++ b/main.css
@@ -200,7 +200,7 @@
     min-height: 100vh;
     min-width: 100%;
     z-index: 1000;
-    animation: slide-bottom 2s 5s ease-in-out forwards;
+    animation: slide-bottom 2s 8s ease-in-out forwards;
 }
 @keyframes slide-bottom{
     0%{
@@ -208,5 +208,39 @@
     }
     100%{
         min-height: 0%;
+    }
+}
+.custom-splash2{
+    opacity: 0;
+    animation: splash-appear 1s 5s ease-in-out forwards;
+}
+@keyframes splash-appear {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+.custom-splash3{
+    animation: splash-slide 6s ease-in-out forwards;
+}
+.custom-splash3-text{
+    font-size: 50vh;
+    color: transparent;
+    background-image: linear-gradient(90deg, var(--primary) 100%, transparent);
+    background-size: 200%;
+    background-repeat: no-repeat;
+    background-clip: text;
+}
+@keyframes splash-slide {
+    0%{
+        left: 100%;
+    }
+    25%,50%{
+        left: 0%;
+    }
+    100%{
+        left: -100%;
     }
 }
