--- a/main.css
+++ b/main.css
@@ -226,7 +226,7 @@
     animation: splash-slide 6s ease-in-out forwards;
 }
 .custom-splash3-text{
-    font-size: 50vh;
+    font-size: 20vw;
     color: transparent;
     background-image: linear-gradient(90deg, var(--primary) 100%, transparent);
     background-size: 200%;
